--- a/README.adoc
+++ b/README.adoc
@@ -1,56 +1,72 @@
-<#assign project_id="gs-maven-android">
+:spring_boot_version: 0.5.0.M6
+:Android_Manifest: http://developer.android.com/guide/topics/manifest/manifest-intro.html
+:Android_Maven_Plugin: https://code.google.com/p/maven-android-plugin
+:sdk: http://developer.android.com/sdk/index.html
+:toc:
+:icons: font
+:source-highlighter: prettify
+:project_id: gs-maven-android
 This guide walks you through the process of building a simple Android project with Maven.
 
-What you'll build
------------------
+== What you'll build
 
 You'll create an Android application that gives you the time of day, and then build it with Maven.
 
-What you'll need
-----------------
+== What you'll need
 
  - About 15 minutes
  - A favorite text editor or IDE
- - [Android SDK][sdk]
+ - {sdk}[Android SDK]
  - An Android device or Emulator
 
-[sdk]: http://developer.android.com/sdk/index.html
 
-## <@how_to_complete_this_guide jump_ahead='Install Maven'/>
+:jump_ahead: Install Maven
+include::https://raw.github.com/spring-guides/getting-started-macros/master/how_to_complete_this_guide.adoc[]
 
 
-<a name="scratch"></a>
-Set up the project
-------------------
+[[scratch]]
+== Set up the project
 
-First, you set up an Android project for Maven to build.  To keep the focus on Maven, make the project as simple as possible for now. If this is your first time working with Android projects, refer to [Installing the Android Development Environment][gs-android] to help configure your development environment.
+First, you set up an Android project for Maven to build.  To keep the focus on Maven, make the project as simple as possible for now. If this is your first time working with Android projects, refer to link:/guides/gs/android[Installing the Android Development Environment] to help configure your development environment.
 
-<@create_directory_structure_org_hello/>
+include::https://raw.github.com/spring-guides/getting-started-macros/master/create_directory_structure_org_hello.adoc[]
 
-<@create_android_manifest/>
+include::https://raw.github.com/spring-guides/getting-started-macros/master/create_android_manifest.adoc[]
 
-    <@snippet path="AndroidManifest.xml" prefix="initial"/>
+`AndroidManifest.xml`
+[source,xml]
+----
+include::initial/AndroidManifest.xml[]
+----
 
-### Create a string resource
 Add a text string. Text strings can be referenced from the application or from other resource files.
 
-    <@snippet path="res/values/strings.xml" prefix="initial"/>
+`res/values/strings.xml`
+[source,xml]
+----
+include::initial/res/values/strings.xml[]
+----
 
-### Create a layout
 Here you define the visual structure for the user interface of your application.
 
-    <@snippet path="res/layout/hello_layout.xml" prefix="initial"/>
+`res/layout/hello_layout.xml`
+[source,xml]
+----
+include::initial/res/layout/hello_layout.xml[]
+----
 
-### Create Java classes
 
 Within the `src/main/java/org/hello` directory, you can create any Java classes you want. To maintain consistency with the rest of this guide, create the following class:
 
-    <@snippet path="src/main/java/org/hello/HelloActivity.java" prefix="initial"/>
+`src/main/java/org/hello/HelloActivity.java`
+[source,java]
+----
+include::initial/src/main/java/org/hello/HelloActivity.java[]
+----
 
 
-<a name="initial"></a>
-Install Maven
--------------
+[[initial]]
+== Install Maven
 
 Now you have a project that you can build with Maven. The next step is to install Maven.
 
@@ -60,32 +76,35 @@ Download and unzip the file, then add the _bin_ folder to your path.
 
 To test the Maven installation, run `mvn` from the command-line:
 
-```sh
-$ mvn -v
-```
+----
+mvn -v
+----
 
 If all goes well, you should see installation information like this:
 
-```sh
+....
 Apache Maven 3.0.5 (r01de14724cdef164cd33c7c8c2fe155faf9602da; 2013-02-19 08:51:28-0500)
 Maven home: /usr/local/apache-maven/apache-maven-3.0.5
 Java version: 1.7.0_21, vendor: Oracle Corporation
 Java home: /Library/Java/JavaVirtualMachines/jdk1.7.0_25.jdk/Contents/Home/jre
 Default locale: en_US, platform encoding: UTF-8
 OS name: "mac os x", version: "10.8.3", arch: "x86_64", family: "mac"
-```
+....
 
 You now have Maven installed.
 
 
-Define a simple Maven build
----------------------------
+== Define a simple Maven build
 
 Now that Maven is installed, you need to create a Maven project definition. You define Maven projects with an XML file named _pom.xml_. Among other things, this file gives the project's name, version, and dependencies that it has on external libraries.
 
 Create a file named pom.xml at the root of the project and give it the following contents:
 
-    <@snippet path="pom.xml" prefix="initial"/>
+`pom.xml`
+[source,xml]
+----
+include::initial/pom.xml[]
+----
 
 The `<packaging>` element specifies an *apk*. This is the simplest possible *pom.xml* file necessary to build an Android project. It includes the following details of the project configuration:
 
@@ -104,7 +123,7 @@ The `<dependencies>` section declares a list of dependencies for the project. Sp
 
 In this case, the `<scope>` element has a value of `provided`. Dependencies of this type are required for compiling the project code, but will be provided at runtime by a container running the code. For example, the Android APIs are always available when an Android application is running.
 
-The `<build>` section declares additional configuration for building an application. Within the build section is a `<plugins>` section, which contains a list of plugins that add additional functionality to the build process. This is where you define the configuration for the [Android Maven Plugin]. As with dependencies, plugins also have `<groupId>`, `<artifactId>`, and `<version>` elements, and they behave as previously described. The plugin declaration also has these elements:
+The `<build>` section declares additional configuration for building an application. Within the build section is a `<plugins>` section, which contains a list of plugins that add additional functionality to the build process. This is where you define the configuration for the {Android_Maven_Plugin}[Android Maven Plugin]. As with dependencies, plugins also have `<groupId>`, `<artifactId>`, and `<version>` elements, and they behave as previously described. The plugin declaration also has these elements:
 
 * `<configuration>`. Plugin-specific configuration. Here you specify which Android Platform SDK to use in the build.
 * `<extensions>`. Combination of specifying a value of `true` and `apk` for `<packaging>` directs the [Android Maven Plugin] to become involved in the build process.
@@ -113,24 +132,23 @@ The `<build>` section declares additional configuration for building an applicat
 At this point you have defined a minimal yet capable Maven project.
 
 
-Build Android code
-------------------
+== Build Android code
 
 Maven is now ready to build the project. You can execute several build lifecycle goals with Maven now, including goals to compile the project's code, create a library package (such as a JAR file), and install the library in the local Maven dependency repository.
 
 Try out the build:
 
-```sh
-$ mvn compile
-```
+----
+mvn compile
+----
 
 This command runs Maven, telling it to execute the _compile_ goal. When it's finished, you should find the compiled _.class_ files in the _target/classes_ directory.
 
 Because it's unlikely that you'll want to distribute or work with .class files directly, you'll probably want to run the _package_ goal instead:
 
-```sh
-$ mvn package
-```
+----
+mvn package
+----
 
 The package goal compiles your Java code, runs any tests, and packages the code in a JAR file within the *target* directory. The name of the JAR file is based on the project's `<artifactId>` and `<version>`. For example, given the minimal pom.xml file shown earlier, the JAR file will be named gs-maven-android-0.1.0.jar.
 
@@ -138,13 +156,12 @@ Because you set the value of `<packaging>` to "apk", the result will be an APK f
 
 The Android Maven plugin provides several more Maven goals that you can use to initiate the various phases of the build process, or interact with the device and emulator. You can see a list of all the available goals by running the following command:
 
-```sh
-$ mvn android:help
-```
+----
+mvn android:help
+----
 
 
-Declare dependencies
---------------------
+== Declare dependencies
 
 The simple Hello World sample is completely self-contained and does not depend on any additional libraries. Most applications, however, depend on external libraries to handle common and/or complex functionality.
 
@@ -152,38 +169,40 @@ For example, suppose you want your application to print the current date and tim
 
 To do this, modify HelloActivity.java to look like this:
 
-    <@snippet path="src/main/java/org/hello/HelloActivity.java" prefix="complete"/>
+`src/main/java/org/hello/HelloActivity.java`
+[source,java]
+----
+include::complete/src/main/java/org/hello/HelloActivity.java[]
+----
 
 In this example, you use Joda Time's `LocalTime` class to retrieve and display the current time. 
 
 If you were to run `mvn package` to build the project now, the build would fail because you have not declared Joda Time as a compile dependency in the build. You can fix that by adding the following lines to `<dependencies>` section of the *pom.xml*:
 
-```xml
+[source,xml]
+----
 <dependency>
     <groupId>joda-time</groupId>
     <artifactId>joda-time</artifactId>
     <version>2.2</version>
 </dependency>
-```
+----
 
 Similar to the Android dependency discussed earlier, this block of XML declares a new dependency for the project, specifically the Joda Time library.
 
-Rebuild Android code with dependencies
---------------------------------------
+== Rebuild Android code with dependencies
 
 Now if you run `mvn compile` or `mvn package`, Maven should resolve the Joda Time dependency from the Maven Central repository and the build will be successful.
 
 Here's the completed pom.xml file:
 
-    <@snippet path="pom.xml" prefix="initial"/>
+`pom.xml`
+[source,xml]
+----
+include::initial/pom.xml[]
+----
 
 
-Summary
--------
+== Summary
 
 Congratulations! You have created a simple yet effective Maven project definition for building Java projects.
-
-
-[Android Maven Plugin]:https://code.google.com/p/maven-android-plugin
-[Android Manifest]:http://developer.android.com/guide/topics/manifest/manifest-intro.html
-[gs-android]: /guides/gs/android
